Using newest Lombok as a better solution